<resources>
    <string name="app_name">Altitude</string>
    <string name="placeholder">-</string>
    <string name="request_location">Request location</string>
    <string name="stop_request">Stop request</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_real">Altitude real</string>
    <string name="vertical_accuracy">Vertical accuracy</string>
    <string name="speed">Speed</string>
    <string name="speed_accuracy">Speed accuracy</string>
    <string name="bearing">Bearing</string>
    <string name="bearing_accuracy">Bearing accuracy</string>
    <string name="provider">Provider</string>
    <string name="satellites">Satellites</string>

    <string name="save_this">Save</string>
    <string name="show_saved">Show all</string>
    <string name="backup">Backup</string>
    <string name="import_">Import</string>
    <string name="ascending">Ascending</string>

    <string name="sort_by">Sort by</string>
    <string name="sort_time">Time</string>
    <string name="sort_name">Name</string>
    <string name="sort_altitude">Altitude</string>
</resources>
