<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:text="@string/sort_by"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/sort_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sort_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_time"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/sort_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_name"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/sort_altitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_altitude"
                android:textSize="16sp" />

        </RadioGroup>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/locations_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_layout" />

</LinearLayout>